test/analysis/accept/map-simple-ruleref.ptk
rule basic = "hello" => $0;