test/analysis/reject/map-ruleref-oob.ptk
# expected: E1308
rule basic = "hello" => $1;